Add Header Elements And Styles

--- a/index.html
+++ b/index.html
@@ -1,17 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landig Page</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style/reset.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <script src="script/script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <div class="main-container">
-            
+      <div class="header-container">
+        <div class="container">
+          <header>
+            <div class="sign-in-up">
+              <button class="sign-btn sign-in">Sign In</button>
+              <button class="sign-btn sign-up">Sign UP</button>
+            </div>
+            <nav>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </nav>
+          </header>
+          <div class="header-content">
+            <div class="header-text">
+              <h1 class="header-title">
+                A Guide To <span class="strong">Rocky</span> Mountain Vacations
+              </h1>
+              <p>
+                Lorem Ipsum Dolor Sit Amet Consec Adipisicing Elit. Molestiae
+                Corrupti Possimus Doloremque, Aliquam Maiores Minus Architecto
+                Vero. Quo Porro Recus Eos. Recusandae Cupiditate .
+              </p>
+              <button class="start">Get Started</button>
+            </div>
+            <div class="img-content">
+              <img src="assets/Button 2.png" alt="Button2" />
+              <img src="assets/play.png" alt="play" class="play-png">
+            </div>
+          </div>
         </div>
+      </div>
+      
     </main>
-</body>
+  </body>
 </html>
