Add Services Section

--- a/index.html
+++ b/index.html
@@ -44,12 +44,45 @@
             </div>
             <div class="img-content">
               <img src="assets/Button 2.png" alt="Button2" />
-              <img src="assets/play.png" alt="play" class="play-png">
+              <img src="assets/play.png" alt="play" class="play-png" />
             </div>
           </div>
         </div>
       </div>
-      
+      <div class="services">
+        <div class="container">
+            <div class="services-content">
+                <div class="services-col">
+                    <div class="icon-box">
+                        <span class="icon-worldBook icon"></span>
+                    </div>
+                    <h2>First click tests</h2>
+                    <p>While Most People Enjoy Casino Gambling.</p>
+                </div>
+                <div class="services-col">
+                    <div class="icon-box">
+                        <span class="icon-biohazard biohazard icon"></span>
+                    </div>
+                    <h2>Design surveys</h2>
+                    <p>Sport Betting, Lottery And Bingo Plaing For The Fun.</p>
+                </div>
+                <div class="services-col">
+                    <div class="icon-box">
+                        <span class="icon-handshake icon"></span>
+                    </div>
+                    <h2>Prefrence tests</h2>
+                    <p>The Myspace Page Defines The Individual.</p>
+                </div>
+                <div class="services-col">
+                    <div class="icon-box">
+                        <span class="icon-person icon"></span>
+                    </div>
+                    <h2>User astronaunt</h2>
+                    <p>Personal Choices And The Overal Personality Of The Person.</p>
+                </div>
+            </div>    
+        </div>
+      </div>
     </main>
   </body>
 </html>
