--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <header>
             <div class="sign-in-up">
               <button class="sign-btn sign-in">Sign In</button>
-              <button class="sign-btn sign-up">Sign UP</button>
+              <button class="sign-btn sign-up">Sign Up</button>
             </div>
             <nav>
               <ul>
@@ -43,7 +43,7 @@
               <button class="start">Get Started</button>
             </div>
             <div class="img-content">
-              <img src="assets/Button 2.png" alt="Button2" />
+              <img src="assets/Button 2.png" alt="Button2" class="city-image" />
               <img src="assets/play.png" alt="play" class="play-png" />
             </div>
           </div>
