--- a/index.html
+++ b/index.html
@@ -51,36 +51,63 @@
       </div>
       <div class="services">
         <div class="container">
-            <div class="services-content">
-                <div class="services-col">
-                    <div class="icon-box">
-                        <span class="icon-worldBook icon"></span>
-                    </div>
-                    <h2>First click tests</h2>
-                    <p>While Most People Enjoy Casino Gambling.</p>
-                </div>
-                <div class="services-col">
-                    <div class="icon-box">
-                        <span class="icon-biohazard biohazard icon"></span>
-                    </div>
-                    <h2>Design surveys</h2>
-                    <p>Sport Betting, Lottery And Bingo Plaing For The Fun.</p>
-                </div>
-                <div class="services-col">
-                    <div class="icon-box">
-                        <span class="icon-handshake icon"></span>
-                    </div>
-                    <h2>Prefrence tests</h2>
-                    <p>The Myspace Page Defines The Individual.</p>
-                </div>
-                <div class="services-col">
-                    <div class="icon-box">
-                        <span class="icon-person icon"></span>
-                    </div>
-                    <h2>User astronaunt</h2>
-                    <p>Personal Choices And The Overal Personality Of The Person.</p>
-                </div>
-            </div>    
+          <div class="services-content">
+            <div class="services-col">
+              <div class="icon-box">
+                <span class="icon-worldBook icon"></span>
+              </div>
+              <h2>First click tests</h2>
+              <p>While Most People Enjoy Casino Gambling.</p>
+            </div>
+            <div class="services-col">
+              <div class="icon-box">
+                <span class="icon-biohazard biohazard icon"></span>
+              </div>
+              <h2>Design surveys</h2>
+              <p>Sport Betting, Lottery And Bingo Plaing For The Fun.</p>
+            </div>
+            <div class="services-col">
+              <div class="icon-box">
+                <span class="icon-handshake icon"></span>
+              </div>
+              <h2>Prefrence tests</h2>
+              <p>The Myspace Page Defines The Individual.</p>
+            </div>
+            <div class="services-col">
+              <div class="icon-box">
+                <span class="icon-person icon"></span>
+              </div>
+              <h2>User astronaunt</h2>
+              <p>Personal Choices And The Overal Personality Of The Person.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="learn">
+        <div class="container">
+          <div class="learn-content">
+            <div class="image-learn">
+              <img src="assets/illustrator.png" alt="illustrator" />
+            </div>
+            <div class="learn-items">
+              <h2>Learn with Protips</h2>
+              <div class="learn-item">Beyond The Naked Eye</div>
+              <div class="learn-item">Make Grilling A Healthy Experience</div>
+              <div class="learn-item">Make Sure Your Ice Is Safe And Clean</div>
+              <div class="learn-item">
+                Peace On Earth A Wonderful Wish But No Way
+              </div>
+              <div class="learn-item">
+                Get Best Advertiser In Your Side Pocket
+              </div>
+              <div class="learn-item learn-item-last">What s Under Your Grill</div>
+
+              <div class="learn-btn">
+                <button class="know-more-btn">Know More</button>
+                <a href="#" class="watch-video">Watch Video</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
