Add Person Section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,24 @@
           </div>
         </div>
       </div>
+      <div class="person">
+        <div class="container">
+          <div class="person-content">
+            <div class="person-image">
+              <img src="assets/TestimonialPicture.png" alt="person">
+            </div>
+            <div class="person-name">
+              <span>John Doe</span>
+            </div>
+            <div class="person-job">
+              <span>CEO, PrettyDopeDesigns</span>
+            </div>
+            <div class="person-details">
+              <p>"When TO User High Heat On Your Barbeque, What s Under Your Grill"</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
