Add Story Section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="container">
           <div class="person-content">
             <div class="person-image">
-              <img src="assets/TestimonialPicture.png" alt="person">
+              <img src="assets/TestimonialPicture.png" alt="person" />
             </div>
             <div class="person-name">
               <span>John Doe</span>
@@ -133,7 +133,48 @@
               <span>CEO, PrettyDopeDesigns</span>
             </div>
             <div class="person-details">
-              <p>"When TO User High Heat On Your Barbeque, What s Under Your Grill"</p>
+              <p>
+                "When TO User High Heat On Your Barbeque, What s Under Your
+                Grill"
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="story">
+        <div class="container">
+          <div class="story-content">
+            <h2>Our Story</h2>
+            <p>Vampires The Romantic Ideology Behind Them</p>
+          </div>
+        </div>
+      </div>
+      <div class="story-detail">
+        <div class="container">
+          <div class="story-detail-content">
+            <div class="col-story-detail left-col">
+              <h2>Who are we?</h2>
+              <p class="first-paragraph">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Nesciunt, dolorum culpa delectus voluptas eligendi possimus
+                consequatur quam vero consequuntur voluptates quis quasi minus
+                alias aperiam totam aut at nisi nemo?
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod
+                ea atque libero ex, quisquam velit vel unde cum deserunt porro?
+              </p>
+            </div>
+            <div class="col-story-detail right-col">
+              <h2>What's up with the name?</h2>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Obcaecati pariatur unde ex amet doloremque dolorem, non corrupti
+                reiciendis. Voluptatem veniam atque nam nobis voluptate,
+                repudiandae magni recusandae maiores placeat laboriosam ullam
+                officia quidem odio sunt illo sed neque minima sapiente corrupti
+                autem illum vel officiis. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              </p>
             </div>
           </div>
         </div>
