Add Recent Post Section

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 alias aperiam totam aut at nisi nemo?
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod
+                <u>Lorem ipsum dolor sit amet consectetur</u>, adipisicing elit. Quod
                 ea atque libero ex, quisquam velit vel unde cum deserunt porro?
               </p>
             </div>
@@ -175,6 +175,31 @@
                 officia quidem odio sunt illo sed neque minima sapiente corrupti
                 autem illum vel officiis. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="recent-post">
+        <h2>Our Recent Post</h2>
+        <p>Vampires The Romantic Ideology Behind Them</p>
+      </div>
+      <div class="recent-post-detail">
+        <div class="container">
+          <div class="recent-post-content">
+            <div class="recent-post-col">
+              <img src="assets/image1.png" alt="image1">
+              <a href="#">Updating To Microsoft Windows Vista Tips</a>
+              <p>By <span class="strong">Abul Hasan Milon</span> | 02 Feb 2019</p>
+            </div>
+            <div class="recent-post-col">
+              <img src="assets/image2.png" alt="image2">
+              <a href="#">Finally A Top Secret Way You Can Get Google</a>
+              <p>By <span class="strong">Abul Hasan Milon</span> | 02 Feb 2019</p>
+            </div>
+            <div class="recent-post-col">
+              <img src="assets/image3.png" alt="image3">
+              <a href="#">The Universe Through A Child S Eyes</a>
+              <p>By <span class="strong">Abul Hasan Milon</span> | 02 Feb 2019</p>
             </div>
           </div>
         </div>
