Add Email Box Section

--- a/index.html
+++ b/index.html
@@ -204,6 +204,23 @@
           </div>
         </div>
       </div>
+      <div class="blue-box">
+        <div class="container">
+          <div class="blue-box-content">
+            <div class="bubble-img bubble-top">
+              <img src="assets/shape1.png" alt="shape1">
+            </div>
+            <div class="bubble-img bubble-bottom">
+              <img src="assets/shape1.png" alt="shape1">
+            </div>
+            <p>Get Update Protips every newsletter</p>
+            <div class="textinput">
+              <input type="text" placeholder="Enter your email">
+              <span>|</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
