Add Footer Section

--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@
                 alias aperiam totam aut at nisi nemo?
               </p>
               <p>
-                <u>Lorem ipsum dolor sit amet consectetur</u>, adipisicing elit. Quod
-                ea atque libero ex, quisquam velit vel unde cum deserunt porro?
+                <u>Lorem ipsum dolor sit amet consectetur</u>, adipisicing elit.
+                Quod ea atque libero ex, quisquam velit vel unde cum deserunt
+                porro?
               </p>
             </div>
             <div class="col-story-detail right-col">
@@ -173,7 +174,8 @@
                 reiciendis. Voluptatem veniam atque nam nobis voluptate,
                 repudiandae magni recusandae maiores placeat laboriosam ullam
                 officia quidem odio sunt illo sed neque minima sapiente corrupti
-                autem illum vel officiis. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                autem illum vel officiis. Lorem ipsum dolor sit, amet
+                consectetur adipisicing elit.
               </p>
             </div>
           </div>
@@ -187,19 +189,25 @@
         <div class="container">
           <div class="recent-post-content">
             <div class="recent-post-col">
-              <img src="assets/image1.png" alt="image1">
+              <img src="assets/image1.png" alt="image1" />
               <a href="#">Updating To Microsoft Windows Vista Tips</a>
-              <p>By <span class="strong">Abul Hasan Milon</span> | 02 Feb 2019</p>
+              <p>
+                By <span class="strong">Abul Hasan Milon</span> | 02 Feb 2019
+              </p>
             </div>
             <div class="recent-post-col">
-              <img src="assets/image2.png" alt="image2">
+              <img src="assets/image2.png" alt="image2" />
               <a href="#">Finally A Top Secret Way You Can Get Google</a>
-              <p>By <span class="strong">Abul Hasan Milon</span> | 02 Feb 2019</p>
+              <p>
+                By <span class="strong">Abul Hasan Milon</span> | 02 Feb 2019
+              </p>
             </div>
             <div class="recent-post-col">
-              <img src="assets/image3.png" alt="image3">
+              <img src="assets/image3.png" alt="image3" />
               <a href="#">The Universe Through A Child S Eyes</a>
-              <p>By <span class="strong">Abul Hasan Milon</span> | 02 Feb 2019</p>
+              <p>
+                By <span class="strong">Abul Hasan Milon</span> | 02 Feb 2019
+              </p>
             </div>
           </div>
         </div>
@@ -208,18 +216,71 @@
         <div class="container">
           <div class="blue-box-content">
             <div class="bubble-img bubble-top">
-              <img src="assets/shape1.png" alt="shape1">
+              <img src="assets/shape1.png" alt="shape1" />
             </div>
             <div class="bubble-img bubble-bottom">
-              <img src="assets/shape1.png" alt="shape1">
+              <img src="assets/shape1.png" alt="shape1" />
             </div>
             <p>Get Update Protips every newsletter</p>
             <div class="textinput">
-              <input type="text" placeholder="Enter your email">
+              <input type="text" placeholder="Enter your email" />
               <span>|</span>
             </div>
           </div>
         </div>
+      </div>
+      <div class="footer">
+        <div class="container">
+          <hr class="first-hr" />
+        </div>
+      </div>
+      <div class="footer-content">
+        <div class="container">
+          <div class="footer-content-detail">
+            <div class="footer-text">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Delectus explicabo doloribus, necessitatibus nam natus iusto
+                neque commodi itaque enim eveniet!
+              </p>
+            </div>
+            <div class="footer-links">
+              <h2>Quick Links</h2>
+              <div class="links">
+                <a href="#">About Us</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+                <a href="#">FAQ</a>
+              </div>
+            </div>
+            <div class="footer-links">
+              <h2>Pages</h2>
+              <div class="links">
+                <a href="#">Disclaimer</a>
+                <a href="#">Financing</a>
+                <a href="#">Privaci Policy</a>
+                <a href="#">Terms of Service</a>
+              </div>
+            </div>
+            <div class="footer-links">
+              <h2>Legal Stuff</h2>
+              <div class="links">
+                <a href="#">Disclaimer</a>
+                <a href="#">Financing</a>
+                <a href="#">Privaci Policy</a>
+                <a href="#">Terms of Service</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="container">
+          <hr class="second-hr" />
+        </div>
+      </div>
+      <div class="desiner">
+        <p>Design By <span>Hassan Rezaei</span></p>
       </div>
     </main>
   </body>
