--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style/reset.css" />
     <link rel="stylesheet" href="style/style.css" />
+    <script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
     <script src="script/script.js" defer></script>
   </head>
   <body>
@@ -31,7 +33,7 @@
             </nav>
           </header>
           <div class="header-content">
-            <div class="header-text">
+            <div class="header-text" data-aos="fade-right">
               <h1 class="header-title">
                 A Guide To <span class="strong">Rocky</span> Mountain Vacations
               </h1>
