Add Animate On Scroll

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style/reset.css" />
     <link rel="stylesheet" href="style/style.css" />
-    <script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
     <script src="script/script.js" defer></script>
   </head>
   <body>
     <main>
       <div class="header-container">
         <div class="container">
-          <header>
+          <header data-aos="fade-in">
             <div class="sign-in-up">
               <button class="sign-btn sign-in">Sign In</button>
               <button class="sign-btn sign-up">Sign Up</button>
@@ -44,38 +44,38 @@
               </p>
               <button class="start">Get Started</button>
             </div>
-            <div class="img-content">
+            <div class="img-content" data-aos="fade-left">
               <img src="assets/Button 2.png" alt="Button2" class="city-image" />
               <img src="assets/play.png" alt="play" class="play-png" />
             </div>
           </div>
         </div>
       </div>
-      <div class="services">
+      <div class="services" >
         <div class="container">
           <div class="services-content">
-            <div class="services-col">
+            <div class="services-col" data-aos="fade-up" data-aos-delay="100" data-aos-duration="500">
               <div class="icon-box">
                 <span class="icon-worldBook icon"></span>
               </div>
               <h2>First click tests</h2>
               <p>While Most People Enjoy Casino Gambling.</p>
             </div>
-            <div class="services-col">
+            <div class="services-col" data-aos="fade-up" data-aos-delay="200" data-aos-duration="500">
               <div class="icon-box">
                 <span class="icon-biohazard biohazard icon"></span>
               </div>
               <h2>Design surveys</h2>
               <p>Sport Betting, Lottery And Bingo Plaing For The Fun.</p>
             </div>
-            <div class="services-col">
+            <div class="services-col" data-aos="fade-up" data-aos-delay="300" data-aos-duration="500">
               <div class="icon-box">
                 <span class="icon-handshake icon"></span>
               </div>
               <h2>Prefrence tests</h2>
               <p>The Myspace Page Defines The Individual.</p>
             </div>
-            <div class="services-col">
+            <div class="services-col" data-aos="fade-up" data-aos-delay="400" data-aos-duration="500">
               <div class="icon-box">
                 <span class="icon-person icon"></span>
               </div>
@@ -88,10 +88,10 @@
       <div class="learn">
         <div class="container">
           <div class="learn-content">
-            <div class="image-learn">
+            <div class="image-learn" data-aos="fade-right">
               <img src="assets/illustrator.png" alt="illustrator" />
             </div>
-            <div class="learn-items">
+            <div class="learn-items" data-aos="fade-left">
               <h2>Learn with Protips</h2>
               <div class="learn-item">Beyond The Naked Eye</div>
               <div class="learn-item">Make Grilling A Healthy Experience</div>
@@ -116,7 +116,7 @@
       </div>
       <div class="testimonial">
         <div class="container">
-          <div class="testimonial-content">
+          <div class="testimonial-content" data-aos="fade-in">
             <h2>Testimonial</h2>
             <p>Vampires The Romantic Ideology Behind Them</p>
           </div>
@@ -124,7 +124,7 @@
       </div>
       <div class="person">
         <div class="container">
-          <div class="person-content">
+          <div class="person-content" data-aos="fade-in">
             <div class="person-image">
               <img src="assets/TestimonialPicture.png" alt="person" />
             </div>
@@ -145,7 +145,7 @@
       </div>
       <div class="story">
         <div class="container">
-          <div class="story-content">
+          <div class="story-content" data-aos="fade-in">
             <h2>Our Story</h2>
             <p>Vampires The Romantic Ideology Behind Them</p>
           </div>
@@ -154,7 +154,7 @@
       <div class="story-detail">
         <div class="container">
           <div class="story-detail-content">
-            <div class="col-story-detail left-col">
+            <div class="col-story-detail left-col" data-aos="fade-in">
               <h2>Who are we?</h2>
               <p class="first-paragraph">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -168,7 +168,7 @@
                 porro?
               </p>
             </div>
-            <div class="col-story-detail right-col">
+            <div class="col-story-detail right-col" data-aos="fade-in">
               <h2>What's up with the name?</h2>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -183,7 +183,7 @@
           </div>
         </div>
       </div>
-      <div class="recent-post">
+      <div class="recent-post" data-aos="fade-in">
         <h2>Our Recent Post</h2>
         <p>Vampires The Romantic Ideology Behind Them</p>
       </div>
@@ -191,23 +191,23 @@
         <div class="container">
           <div class="recent-post-content">
             <div class="recent-post-col">
-              <img src="assets/image1.png" alt="image1" />
-              <a href="#">Updating To Microsoft Windows Vista Tips</a>
-              <p>
+              <img src="assets/image1.png" alt="image1" data-aos="fade-in" data-aos-delay="100" />
+              <a href="#" data-aos="fade-in">Updating To Microsoft Windows Vista Tips</a>
+              <p data-aos="fade-in">
                 By <span class="strong">Abul Hasan Milon</span> | 02 Feb 2019
               </p>
             </div>
             <div class="recent-post-col">
-              <img src="assets/image2.png" alt="image2" />
-              <a href="#">Finally A Top Secret Way You Can Get Google</a>
-              <p>
+              <img src="assets/image2.png" alt="image2" data-aos="fade-in" data-aos-delay="250" />
+              <a href="#" data-aos="fade-in">Finally A Top Secret Way You Can Get Google</a>
+              <p data-aos="fade-in">
                 By <span class="strong">Abul Hasan Milon</span> | 02 Feb 2019
               </p>
             </div>
             <div class="recent-post-col">
-              <img src="assets/image3.png" alt="image3" />
-              <a href="#">The Universe Through A Child S Eyes</a>
-              <p>
+              <img src="assets/image3.png" alt="image3" data-aos="fade-in" data-aos-delay="350" />
+              <a href="#" data-aos="fade-in">The Universe Through A Child S Eyes</a>
+              <p data-aos="fade-in">
                 By <span class="strong">Abul Hasan Milon</span> | 02 Feb 2019
               </p>
             </div>
@@ -216,7 +216,7 @@
       </div>
       <div class="blue-box">
         <div class="container">
-          <div class="blue-box-content">
+          <div class="blue-box-content" data-aos="fade-in">
             <div class="bubble-img bubble-top">
               <img src="assets/shape1.png" alt="shape1" />
             </div>
@@ -239,14 +239,14 @@
       <div class="footer-content">
         <div class="container">
           <div class="footer-content-detail">
-            <div class="footer-text">
+            <div class="footer-text" data-aos="fade-in" data-aos-delay="100">
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Delectus explicabo doloribus, necessitatibus nam natus iusto
                 neque commodi itaque enim eveniet!
               </p>
             </div>
-            <div class="footer-links">
+            <div class="footer-links" data-aos="fade-in" data-aos-delay="300">
               <h2>Quick Links</h2>
               <div class="links">
                 <a href="#">About Us</a>
@@ -255,7 +255,7 @@
                 <a href="#">FAQ</a>
               </div>
             </div>
-            <div class="footer-links">
+            <div class="footer-links" data-aos="fade-in" data-aos-delay="500">
               <h2>Pages</h2>
               <div class="links">
                 <a href="#">Disclaimer</a>
@@ -264,7 +264,7 @@
                 <a href="#">Terms of Service</a>
               </div>
             </div>
-            <div class="footer-links">
+            <div class="footer-links" data-aos="fade-in" data-aos-delay="700">
               <h2>Legal Stuff</h2>
               <div class="links">
                 <a href="#">Disclaimer</a>
@@ -281,7 +281,7 @@
           <hr class="second-hr" />
         </div>
       </div>
-      <div class="desiner">
+      <div class="desiner" data-aos="fade-in" data-aos-delay="750">
         <p>Design By <span>Hassan Rezaei</span></p>
       </div>
     </main>
